--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
           <div class="studio">
             <div style="background-image:url('./images/bkgs/studio.jpg');" background="#ffffff" state="Shown" class="img"></div>
             <div class="text">
-              <p>Drapets was created in 2004 by Raquel Ruiz Ucles, intending to respond to the new trends in textile design, emerged with the advent of the new millennium.</p>
-              <p>It was so ctom Study has been leading the way in both foreign fashion creations, children, lingerie, bathroom, as well as home design and stationery.</p>
-              <p>In November 2012, with the addition of the Study Pagani team provided a background of over 40 years experience, Drapets offers not only quality and design, bringing together creative talent and business, but also a service to customers and the size of their ideas.</p>
+              <p>Drapets was created in 2004 by Raquel Ruiz Ucles, aiming to meet the latest trends in textile design that appeared with the coming of the new millenium.</p>
+              <p>Since then, the studio has endeavored to create outerwear, children's wear, lingerie and bathing clothes, as well as upholstery and stationery designs.</p>
+              <p>In November 2012, with the integration of the team of Estudi Pagani, which contributes with over 40 years of experience, Drapets not only offers quality and state of the art design, but also, combining creative and marketing skills, a service tailored to customer needs and ideas.</p>
             </div>
           </div>
         </div>
