--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <!--a Home--><a data-state="Active" class="studio">The Studio</a>
           </div>
           <div class="direction">
-            <p>Roslía de castro, 59</p>
-            <p>Barcelona</p>
-            <p>(+34) 93 435 05 00</p>
+            <p>Rosalía de castro, 59</p>
+            <p>Barcelona, Spain.</p>
+            <p>(+34) 93 446 17 93</p>
             <p><a href="mailto:contact@drapets.com">contact@drapets.com</a></p>
           </div>
         </div>
