--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div style="background-image:url('./images/bkgs/baby-girl.jpg');" background="#ffffff" state="Hidden" class="img"></div>
           <div style="background-image:url('./images/bkgs/lil-girl.jpg');" background="#ffffff" state="Hidden" class="img"></div>-->
           <div class="studio">
-            <div style="background-image:url('./images/bkgs/studio.jpg');" background="#ffffff" state="Shown" class="img"></div>
+            <!--<div style="background-image:url('./images/bkgs/studio.jpg');" background="#ffffff" state="Shown" class="img"></div>-->
             <div class="text">
               <p>Drapets was created in 2004 by Raquel Ruiz Ucles, aiming to meet the latest trends in textile design that appeared with the coming of the new millenium.</p>
               <p>Since then, the studio has endeavored to create outerwear, children's wear, lingerie and bathing clothes, as well as upholstery and stationery designs.</p>
