V2, just one image

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Basic Meta-->
     <title>Drapets :: Textile Design</title>
-    <meta name="description" content="WebsitApp Description">
-    <meta name="keywords" content="Keyword1, keyword 2">
+    <meta name="description" content="The studio has endeavored to create outwear, children's wear, lingerie and swimwear clothes, as well as upholstery and stationery designs.">
+    <meta name="keywords" content="Barcelona, Design, textile design, graphic design, children's wear, lingerie, swimwear, clothes, upholsetry, stationery designs">
     <!--Facebook Meta-->
     <meta property="og:title" content="Drapets">
     <meta property="og:site_name" content="Drapets">
-    <meta property="og:description" content="Textile Design">
-    <meta property="og:image" content="http://imageUrl.jpg">
+    <meta property="og:description" content="The studio has endeavored to create outwear, children's wear, lingerie and swimwear clothes, as well as upholstery and stationery designs.">
+    <meta property="og:image" content="./images/frame_image_01.jpg">
     <meta property="og:url" content="http://www.drapets.com">
     <meta property="og:type" content="website">
     <!--Favicon-->
@@ -28,45 +28,28 @@
     <!--RSS TODO-->
   </head>
   <body class="home">
-    <div id="WebsiteApp">
-      <div id="Views"></div>
-      <div id="Wrapper" class="wrapper">
-        <div class="header Header"><a href="./" title="Drapets, Textile Design" class="logo">Drapets, Textile Design</a>
-          <div class="nav">
-            <!--a Toddler-->
-            <!--a Boys-->
-            <!--a Girls-->
-            <!--a Men-->
-            <!--a Women-->
-            <!--a Home--><a data-state="Active" class="studio">The Studio</a>
-          </div>
-          <div class="direction">
-            <p>Roslía de castro, 59</p>
-            <p>Barcelona</p>
-            <p>(+34) 93 435 05 00</p>
-            <p><a href="mailto:contact@drapets.com">contact@drapets.com</a></p>
-          </div>
+    <section class="content">
+      <div class="inner">
+        <div class="studio">
+          <article class="text">
+            <p>Drapets was created in 2004 by Raquel Ruiz Ucles, aiming to meet the latest trends in textile design that appeared with the coming of the new millenium.</p>
+            <p>Since then, the studio has endeavored to create outwear, children's wear, lingerie and swimwear clothes, as well as upholstery and stationery designs.</p>
+            <p>In November 2012, with the integration of the team of Estudi Pagani, which contributes with over 40 years of experience, Drapets not only offers quality and state of the art design, but also, combining creative and marketing skills, a service tailored to customer needs and ideas.</p>
+          </article>
         </div>
-        <div class="contents"><!--.collage.Collage
-          <div style="background-image:url('./images/collage/collage_01.jpg');" class="img"></div>
-          <div style="background-image:url('./images/collage/collage_02.jpg');" class="img"></div>
-          <div style="background-image:url('./images/collage/collage_03.jpg');" class="img"></div>
-          <div style="background-image:url('./images/collage/collage_04.jpg');" class="img"></div>
-          <div style="background-image:url('./images/collage/collage_05.jpg');" class="img"></div>
-          <div style="background-image:url('./images/collage/collage_06.jpg');" class="img"></div>--><!--.backgrounds.Backgrounds
-          <div style="background-image:url('./images/bkgs/baby-girl.jpg');" background="#ffffff" state="Hidden" class="img"></div>
-          <div style="background-image:url('./images/bkgs/lil-girl.jpg');" background="#ffffff" state="Hidden" class="img"></div>-->
-          <div class="studio">
-            <div style="background-image:url('./images/bkgs/studio.jpg');" background="#ffffff" state="Shown" class="img"></div>
-            <div class="text">
-              <p>Drapets was created in 2004 by Raquel Ruiz Ucles, aiming to meet the latest trends in textile design that appeared with the coming of the new millenium.</p>
-              <p>Since then, the studio has endeavored to create outerwear, children's wear, lingerie and bathing clothes, as well as upholstery and stationery designs.</p>
-              <p>In November 2012, with the integration of the team of Estudi Pagani, which contributes with over 40 years of experience, Drapets not only offers quality and state of the art design, but also, combining creative and marketing skills, a service tailored to customer needs and ideas.</p>
-              
-            </div>
-          </div>
-        </div>
+        <div class="images"><img src="./images/frame_image_01.jpg" alt="Drapets Textile Design"></div>
       </div>
-    </div>
+    </section>
+    <header class="Header">
+      <h1><a href="./" title="Drapets, Textile Design" class="logo">Drapets, Textile Design</a></h1><!--nav<a>Toddler</a><a>Boys</a><a>Girls</a><a>Men</a><a>Women</a><a>Home</a><a data-state="Active" class="studio">The Studio</a>-->
+      <footer class="direction">
+        <address>
+          <p>Roslía de castro, 59</p>
+          <p>Barcelona</p>
+          <p>(+34) 93 435 05 00</p>
+          <p><a href="mailto:contact@drapets.com">contact@drapets.com</a></p>
+        </address>
+      </footer>
+    </header>
   </body>
 </html>
