--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta property="og:image" content="./images/frame_image_01.jpg">
     <meta property="og:url" content="http://www.drapets.com">
     <meta property="og:type" content="website">
+    <!--Google Meta-->
+    <meta name="google-site-verification" content="inENoNVgRanRXsdG9ruX05NEB_je6TudypjF772SzTQ">
     <!--Favicon-->
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -24,8 +26,6 @@
     <!--Other Javascript-->
     <script src="./javascripts/jquery.min.js"></script>
     <script src="./javascripts/scripts.js"></script>
-    <!--script( src="app/libs/ga.js")-->
-    <!--RSS TODO-->
   </head>
   <body class="home">
     <section class="content">
