--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h1><a href="./" title="Drapets, Textile Design" class="logo">Drapets, Textile Design</a></h1><!--nav<a>Toddler</a><a>Boys</a><a>Girls</a><a>Men</a><a>Women</a><a>Home</a><a data-state="Active" class="studio">The Studio</a>-->
       <footer class="direction">
         <address>
-          <p>Roslía de castro, 59</p>
+          <p>Rosalía de castro, 59</p>
           <p>Barcelona</p>
           <p>(+34) 93 435 05 00</p>
           <p><a href="mailto:contact@drapets.com">contact@drapets.com</a></p>
