--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Basic Meta-->
     <title>Drapets :: Textile Design</title>
-    <meta name="description" content="The studio has endeavored to create outwear, children's wear, lingerie and swimwear clothes, as well as upholstery and stationery designs.">
-    <meta name="keywords" content="Barcelona, Design, textile design, graphic design, children's wear, lingerie, swimwear, clothes, upholsetry, stationery designs">
+    <meta name="description" content="The studio has endeavored to create outwear, children's wear, lingerie and swimwear, as well as upholstery and stationery designs.">
+    <meta name="keywords" content="Barcelona, Design, textile design, graphic design, children's wear, lingerie, swimwear, upholsetry, stationery designs">
     <!--Facebook Meta-->
     <meta property="og:title" content="Drapets">
     <meta property="og:site_name" content="Drapets">
@@ -46,7 +46,7 @@
         <div class="studio">
           <article class="text">
             <p>Drapets was created in 2004 by Raquel Ruiz Ucles, aiming to meet the latest trends in textile design that appeared with the coming of the new millenium.</p>
-            <p>Since then, the studio has endeavored to create outwear, children's wear, lingerie and swimwear clothes, as well as upholstery and stationery designs.</p>
+            <p>Since then, the studio has endeavored to create outwear, children's wear, lingerie and swimwear, as well as upholstery and stationery designs.</p>
             <p>In November 2012, with the integration of the team of Estudi Pagani, which contributes with over 40 years of experience, Drapets not only offers quality and state of the art design, but also, combining creative and marketing skills, a service tailored to customer needs and ideas.</p>
           </article>
         </div>
