--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <!--Basic Meta-->
     <title>Drapets :: Textile Design</title>
     <meta name="description" content="The studio has endeavored to create outwear, children's wear, lingerie and swimwear, as well as upholstery and stationery designs.">
-    <meta name="keywords" content="Barcelona, Design, textile design, graphic design, children's wear, lingerie, swimwear, upholsetry, stationery designs">
+    <meta name="keywords" content="Barcelona, Design, textile design, graphic design, children's wear, lingerie, swimwear, clothes, upholsetry, stationery designs">
     <!--Facebook Meta-->
     <meta property="og:title" content="Drapets">
     <meta property="og:site_name" content="Drapets">
-    <meta property="og:description" content="The studio has endeavored to create outwear, children's wear, lingerie and swimwear clothes, as well as upholstery and stationery designs.">
+    <meta property="og:description" content="The studio has endeavored to create outwear, children's wear, lingerie and swimwear, as well as upholstery and stationery designs.">
     <meta property="og:image" content="./images/frame_image_01.jpg">
     <meta property="og:url" content="http://www.drapets.com">
     <meta property="og:type" content="website">
@@ -26,19 +26,6 @@
     <!--Other Javascript-->
     <script src="./javascripts/jquery.min.js"></script>
     <script src="./javascripts/scripts.js"></script>
-    <script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-38352881-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
   </head>
   <body class="home">
     <section class="content">
@@ -60,7 +47,7 @@
           <p>Rosalía de Castro, 59</p>
           <p>Barcelona</p>
           <p>(+34) 93 446 17 93</p>
-          <p><a href="mailto:contact@drapets.com">contact@drapets.com</a></p>
+          <p><a href="mailto:drapets@gmail.com">Contact us</a></p>
         </address>
       </footer>
     </header>
